force-app/main/default/objects/Related_Repair_Package__c/Related_Repair_Package__c.object-meta.xml
<CustomObject>
    <label>Related Repair Package</label>
    <nameField>
        <displayFormat>RRP-{0000}</displayFormat>
        <label>Related Repair Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Repair Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>