force-app/main/default/objects/Related_Repair_Package__c/fields/Number_of_Times__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times__c</fullName>
    <description>This field is created by Mayank Pant for user story:https://jira.hyundai-autoever.eu/browse/GD-2132</description>
    <label>Number of Times</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>