force-app/main/default/objects/Related_Repair_Package__c/fields/Repair_Package__c.field-meta.xml
<CustomField>
    <fullName>Repair_Package__c</fullName>
    <description>Created By : Shashikant Bagale
Created Date: 14/1/2020</description>
    <label>Repair Package</label>
    <referenceTo>RepairPackage__c</referenceTo>
    <relationshipLabel>Related Repair Packages</relationshipLabel>
    <relationshipName>Related_Repair_Packages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>